1.1.0 to 1.1.1
----------------------------------------------------------------------
- Added the ability to define RRAs for response time data per
  poller package. Bug 680
- Fixed a style sheet issue in the WebUI. Bug 568
- Added non-blocking I/O to HTTPS service.
- Added Response Time collection to the following Monitors:
  Citrix, FTP, HTTPS, IMAP, POP3, SMTP and TCP. Bug 693
- Allowed for the default action of generating a newSuspect event
  when a trap is received from an unknown IP address to be turned
  off.
- Associated traps with nodes. Bug 582
- Fixed small bug in Trap handler. Bug 676

1.0.0 to 1.1.0
----------------------------------------------------------------------
- Added Event definitions for traps from 3Com, APC, Brocade, CIM,
  Cisco, Fore, HP, Intel, Microsoft, Novell, Oracle, SonicWall,
  and Xerox devices.
- Changed most capsd plugins and poller service monitors to 
  use non-blocking I/O in case of NoRouteToHost.
- Added the ability to choose NOT to notify on a given service
  via the WebUI. (Thx Nick W).
- Added two new fields for notifications: %nodelabel% will return
  the nodelabel for the nodeid in the event, and %interfaceresolve%
  will return the hostname for the IP address of the interface.
  (Thx Nick W). Bug 654 
- Added the ability to display reports on the response time for
  ICMP, HTTP, DNS and DHCP polls. Bug 612
- Added a new XML file called webui-colors. Currently this only
  allows one to set the colors for the categories display,
  but this will grow to include all the colors in the Web UI.
- Since the UEI is just a string, removed the "http://" and all
  references to "bluebird" in UEIs.
- Disallowed spaces in Path names. Bug 657
- Removed borders around Event and Notification lists (per Larry)
- Added the ability to match an event to more than one notification.
  Added the boolean "match-all" to the notifd configuration to
  control this (default is false or off). Thx Nick Wesselman for
  most of the code for this.